@@ -156,7 +156,6 @@
 						--add-opens java.base/java.lang=ALL-UNNAMED
 						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
 						--add-opens java.base/java.util=ALL-UNNAMED
-						-XX:+EnableDynamicAgentLoading
 					</argLine>
 				</configuration>
 			</plugin>
